# gilrs

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  rustfmt.toml
ci_docker/: Dockerfile  README.md  config
examples/: ev.rs  ex.rs  ff.rs  ff_pos.rs  gamepad_info.rs  mapping.rs  state.rs
gilrs/: CHANGELOG.md  Cargo.toml  build.rs
gilrs-core/: CHANGELOG.md  Cargo.toml  README.md
gilrs-core/examples/: ev.rs  ev_core.rs  web.rs
gilrs-core/src/: lib.rs  utils.rs
gilrs-core/src/platform/: mod.rs
gilrs-core/src/platform/default/: gamepad.rs
gilrs-core/src/platform/linux/: ff.rs  gamepad.rs  ioctl.rs  udev.rs
gilrs-core/src/platform/macos/: gamepad.rs  hid.rs  io_kit.rs  mod.rs
gilrs-core/src/platform/wasm/: gamepad.rs  mod.rs
gilrs-core/src/platform/windows/: ff.rs  gamepad.rs
gilrs-core/src/platform/windows_wgi/: ff.rs  gamepad.rs  mod.rs
gilrs-core/src/platform/windows_xinput/: ff.rs  gamepad.rs  mod.rs
gilrs/examples/: ev.rs  ff.rs  ff_pos.rs  gamepad_info.rs  gui.rs  serde.rs
gilrs/examples/wasm/: README.md  index.html  wasm_gui.ps1  wasm_gui.sh
gilrs/src/: gamepad.rs  lib.rs  utils.rs
gilrs/src/ev/: filter.rs  mod.rs
gilrs/src/ff/: base_effect.rs  effect_source.rs  mod.rs  server.rs  time.rs
gilrs/src/mapping/: mod.rs  parser.rs
src/: constants.rs  ev.rs  ff.rs  gamepad.rs  lib.rs  mapping.rs  udev.rs  utils.rs
src/ev/: filter.rs  mod.rs  state.rs
src/ff/: base_effect.rs  effect_source.rs  mod.rs  server.rs  time.rs
src/mapping/: mod.rs  parser.rs
src/platform/: mod.rs
src/platform/default/: ff.rs  gamepad.rs  mod.rs
src/platform/linux/: ff.rs  gamepad.rs  ioctl.rs  ioctl_def.rs  mod.rs  udev.rs
src/platform/windows/: ff.rs  gamepad.rs  mod.rs
