[package]
name = "gilrs"
version = "0.6.0"
authors = ["Arvamer <arvamer@gmail.com>"]
license = "Apache-2.0/MIT"
exclude = ["controller.svg"]
description = "Game Input Library for Rust"
documentation = "https://docs.rs/gilrs/"
repository = "https://gitlab.com/Arvamer/gilrs"
readme = "README.md"
keywords = ["gamepad", "joystick", "input"]
categories = ["game-engines"]

[badges]
gitlab = { repository = "Arvamer/gilrs" }

[dependencies]
vec_map = "0.8"
uuid = "0.6.0-beta"
log = "0.4.1"
fnv = "1.0"

[dev-dependencies]
env_logger = "0.5.3"

[target.'cfg(target_os = "linux")'.dependencies]
libudev-sys = "0.1"
libc = "0.2"
nix = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.4", features = ["winerror", "xinput"] }
