[package]
name = "gilrs"
version = "0.6.1"
authors = ["Arvamer <arvamer@gmail.com>"]
license = "Apache-2.0/MIT"
exclude = ["controller.svg"]
description = "Game Input Library for Rust"
documentation = "https://docs.rs/gilrs/"
repository = "https://gitlab.com/gilrs-project/gilrs"
readme = "README.md"
keywords = ["gamepad", "joystick", "input"]
categories = ["game-engines"]

[badges]
gitlab = { repository = "gilrs-project/gilrs" }

[dependencies]
vec_map = "0.8"
uuid = "0.7.0"
log = "0.4.1"
fnv = "1.0"
gilrs-core = { git = "https://gitlab.com/gilrs-project/gilrs-core" }

[dev-dependencies]
env_logger = "0.5.3"

