[package]
name = "gilrs-core"
version = "0.1.0"
authors = ["Mateusz Sieczko <arvamer@gmail.com>"]

[dependencies]
uuid = "0.7"
log = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
libudev-sys = "0.1"
libc = "0.2"
nix = "0.11"
vec_map = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.4", features = ["winerror", "xinput"] }
